[package]
name = "doc-feature-examples"
version = "0.1.3"
edition = "2021"
description = "Example crate testing how features interact with docs.rs"
license = "Apache-2.0"
repository = "https://github.com/kevinheavey/doc-feature-examples"
documentation = "https://docs.rs/doc-feature-examples"

[features]
foo = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    # Enable doc_cfg showing the required features.
    "--cfg=docsrs",
]
